# claude-code-config

./: .commitlintrc.json  .env.example  .gitignore  .gitleaks.toml  .gitmodules  .markdown-link-check.json  .pre-commit-config.yaml  .semgrepignore  .supply-chain-allowlist.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  WORKFLOW-v2.md  WORKFLOW.md  install.sh  settings.json  statusline-command.sh
controller/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
controller/adapters/: generic-cli-adapter.sh
controller/config/: adversarial-reviewers.yaml  harnesses.yaml  overengineering-lens.yaml
controller/eval/: baseline.json  ci-config.yaml  eval-config.yaml
controller/eval/sample-target/: README.md  strutils.py  test_strutils.py
controller/schemas/: bugfix-agent-response.schema.json
controller/src/sdlc/: __init__.py  adversarial.py  build.py  build_issue.py  capability.py  change_class.py  clean.py  cli.py  cohort.py  commitlint.py  contracts.py  cost_estimate.py  coverage_precheck.py  dashboard.py  degradation.py  dependency_scan.py  discovery.py  dispatch.py  doc_currency.py  doctor.py  eval_compare.py  evaluate.py  fix_issue.py  github_stats.py  gitlab_preflight.py  harness.py  host_auth.py  identity.py  issue_host.py  ledger_view.py  (+33 more)
controller/tests/: conftest.py  test_adversarial.py  test_awaiting_approval.py  test_budget_gate.py  test_build.py  test_build_issue.py  test_build_model_routing.py  test_capability.py  test_change_class.py  test_change_request.py  test_clean.py  test_cli.py  test_cli_build.py  test_cli_clean.py  test_cli_eval.py  test_cli_eval_compare.py  test_cli_fix.py  test_cli_issues_assign.py  test_cli_issues_init.py  test_cli_model_backfill.py  test_cli_predict_quality.py  test_cli_reconcile.py  test_cli_repair.py  test_cli_rollback.py  test_cli_runs.py  test_cli_state.py  test_cli_status.py  test_cli_sync.py  test_cli_usage_reconcile.py  test_codex_adapter.py  test_codex_adversarial_review.py  test_codex_review_routing.py  test_codex_worker_runtime_docs.py  test_cohort.py  test_commitlint.py  test_cost_estimate.py  test_coverage_gaps.py  test_coverage_precheck.py  test_dashboard.py  test_degradation.py  (+84 more)
(+389 files in other folders)
