# ABOUTME: Packaging + tooling config for the sdlc controller CLI.
# ABOUTME: Python + uv + Typer + Pydantic; exposes the `sdlc` console script.

[project]
name = "sdlc-controller"
version = "1.13.2"
description = "External controller for the autonomous-SDLC state machine (Epic-07)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FX", email = "mail@fxmartin.me" }]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
]

[project.scripts]
sdlc = "sdlc.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdlc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
