# ABOUTME: Packaging + tooling config for the sdlc controller CLI.
# ABOUTME: Python + uv + Typer + Pydantic; exposes the `sdlc` console script.

[project]
name = "sdlc-controller"
version = "1.82.0"
description = "External controller for the autonomous-SDLC state machine (Epic-07)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FX", email = "mail@fxmartin.me" }]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "jsonschema>=4.21",
    "pyyaml>=6",
]

[project.scripts]
sdlc = "sdlc.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdlc"]
# Explicitly bundle the JSON schemas as package data so `sdlc validate` keeps
# working under `uv tool install`, where the source tree is gone (Epic-07 E2E
# fix). importlib.resources resolves them as `sdlc/schemas/*.schema.json`.
artifacts = ["src/sdlc/schemas/*.schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: end-to-end tests that build a wheel and spin up a venv",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
